--- a/Project.WEB/_Imports.razor
+++ b/Project.WEB/_Imports.razor
@@ -8,3 +8,6 @@
 @using Microsoft.JSInterop
 @using Project.WEB
 @using Project.WEB.Shared
+@using Project.Shared.Entities
+@using Project.WEB.Repositories
+
