--- a/Project.WEB/_Imports.razor
+++ b/Project.WEB/_Imports.razor
@@ -1,4 +1,5 @@
-﻿@using System.Net.Http
+﻿@using System.Net
+@using System.Net.Http
 @using System.Net.Http.Json
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
@@ -11,4 +12,5 @@
 @using Project.Shared.Entities
 @using Project.WEB.Repositories
 @using CurrieTechnologies.Razor.SweetAlert2
+
 
