--- a/Project.WEB/_Imports.razor
+++ b/Project.WEB/_Imports.razor
@@ -12,5 +12,5 @@
 @using Project.Shared.Entities
 @using Project.WEB.Repositories
 @using CurrieTechnologies.Razor.SweetAlert2
-
+@using Microsoft.AspNetCore.Components.Authorization
 
