Creation Login, Register and Logout WEB

--- a/Project.WEB/_Imports.razor
+++ b/Project.WEB/_Imports.razor
@@ -11,6 +11,9 @@
 @using Project.WEB.Shared
 @using Project.Shared.Entities
 @using Project.WEB.Repositories
+@using Project.Shared.DTOs
+@using Project.Shared.Enums
+@using Project.WEB.Auth
 @using CurrieTechnologies.Razor.SweetAlert2
 @using Microsoft.AspNetCore.Components.Authorization
 
