--- a/Project.WEB/Pages/Auth/Login.razor
+++ b/Project.WEB/Pages/Auth/Login.razor
@@ -4,13 +4,20 @@
 @inject NavigationManager navigationManager
 @inject ILoginService loginService
 
-<h3>Iniciar Sesión</h3>
+<div class="row">
+    <div class="col-md-4  offset-md-4">
 
 <EditForm Model="loginDTO" OnValidSubmit="LoginAsync">
     <DataAnnotationsValidator />
+            <div class="card bg-light">
+                <div class="card-header justify-content-center">
+                    <span>
+                        <i class="oi oi-account-login" /> Iniciar Sesión
+                        <button class="btn btn-sm btn-primary float-end" type="submit"><i class="oi oi-check" /> Iniciar Sesión</button>
+                    </span>
+                </div>
+                <div class="card-body">
 
-    <div class="row">
-        <div class="col-4">
             <div class="mb-3">
                 <label>Email:</label>
                 <div>
@@ -25,10 +32,11 @@
                     <ValidationMessage For="@(() => loginDTO.Password)" />
                 </div>
             </div>
-            <button class="btn btn-primary" type="submit">Iniciar Sesión</button>
         </div>
     </div>
 </EditForm>
+    </div>
+</div>
 
 @code {
     private LoginDTO loginDTO = new();
