--- a/Project.WEB/Pages/Countries/CountriesIndex.razor
+++ b/Project.WEB/Pages/Countries/CountriesIndex.razor
@@ -3,61 +3,74 @@
 @inject NavigationManager navigationManager
 @inject SweetAlertService sweetAlertService
 
-<h3>Countries</h3>
+@if (Countries is null)
+{
+    <div class="spinner"/>
+}
+else
+{
+    <div class="card">
+        <div class="card-header">
+            <span>
+                <i class="oi oi-globe"></i> Países 
+                <a class="btn btn-sm btn-primary float-end" href="/countries/create"><i class="oi oi-plus"></i> Adicionar País</a>
+            </span>
+        </div>
+        <div class="card-body">
+            <div class="mb-2" style="display: flex; flex-wrap:wrap; align-items: center;">
+                <div>
+                    <input style="width: 400px;" type="text" class="form-control" id="titulo" placeholder="Buscar país..." @bind-value="Filter" />
+                </div>
+                <div class="mx-1">
+                    <button type="button" class="btn btn-outline-primary" @onclick="ApplyFilterAsync"><i class="oi oi-layers" /> Filtrar</button>
+                    <button type="button" class="btn btn-outline-danger" @onclick="CleanFilterAsync"><i class="oi oi-ban" /> Limpiar</button>
+                </div>
+            </div>
 
-<div class="mb-2" style="display: flex; flex-wrap:wrap; align-items: center;">
-    <div>
-        <a class="btn btn-primary" href="/countries/create">Nuevo País</a>
-    </div>
-    <div class="mx-2">
-        <input style="width: 400px;" type="text" class="form-control" id="titulo" placeholder="Buscar país..." @bind-value="Filter" />
-    </div>
-    <div>
-        <button type="button" class="btn btn-outline-primary" @onclick="ApplyFilterAsync">Filtrar</button>
-        <button type="button" class="btn btn-outline-danger" @onclick="CleanFilterAsync">Limpiar</button>
-    </div>
-</div>
+            <Pagination CurrentPage="currentPage"
+                        TotalPages="totalPages"
+                        SelectedPage="SelectedPage" />
 
-<Pagination CurrentPage="currentPage"
-            TotalPages="totalPages"
-            SelectedPage="SelectedPage" />
-
-<GenericList MyList="Countries">
-    <Body>
-        <table class="table table-striped">
-            <thead>
-                <tr>
-                    <th></th>
-                    <th style="width:220px">Estados / Departamentos</th>
-                    <th style="width:260px"></th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var country in Countries!)
-                {
-                    <tr>
-                        <td>
-                            <a href="/countries/details/@country.Id" class="btn btn-info">Details</a>
-                            <a href="/countries/edit/@country.Id" class="btn btn-warning">Edit</a>
-                            <button class="btn btn-danger" @onclick=@(() => Delete(country))>Delete</button>
-                        </td>
-                        <td>
-                            @country.Name
-                        </td>
-                        <td>
-                            @country.StatesNumber
-                        </td>
-                    </tr>
-                }
-            </tbody>
-        </table>
-    </Body>
-</GenericList>
+            <GenericList MyList="Countries">
+                <Body>
+                    <table class="table table-striped">
+                        <thead>
+                            <tr>
+                                <th>Pais</th>
+                                <th style="width:220px">Estados / Departamentos</th>
+                                <th style="width:260px"></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var country in Countries!)
+                            {
+                                <tr>
+                                    <td>
+                                        @country.Name
+                                    </td>
+                                    <td>
+                                        @country.StatesNumber
+                                    </td>
+                                    <td>
+                                        <a href="/countries/details/@country.Id" class="btn btn-info btn-sm"><i class="oi oi-list" /> Detalles</a>
+                                        <a href="/countries/edit/@country.Id" class="btn btn-warning btn-sm"><i class="oi oi-pencil" /> Editar</a>
+                                        <button class="btn btn-danger btn-sm" @onclick=@(() => DeleteAsync(country.Id))><i class="oi oi-trash" /> Borrar</button>
+                                    </td>
+                                </tr>
+                            }
+                            </tbody>
+                        </table>
+                    </Body>
+                </GenericList>
+            </div>
+        </div>
+}
 
 @code {
-    public List<Country>? Countries { get; set; }
     private int currentPage = 1;
     private int totalPages;
+
+    public List<Country>? Countries { get; set; }
 
     [Parameter]
     [SupplyParameterFromQuery]
@@ -113,14 +126,16 @@
 
     }
 
-    private async Task Delete(Country country)
+    private async Task DeleteAsync(int id)
     {
         var result = await sweetAlertService.FireAsync(new SweetAlertOptions
             {
                 Title = "Confirmación",
                 Text = "¿Esta seguro que quieres borrar el registro?",
                 Icon = SweetAlertIcon.Question,
-                ShowCancelButton = true
+                ShowCancelButton = true,
+                CancelButtonText = "No",
+                ConfirmButtonText = "Si"
             });
 
         var confirm = string.IsNullOrEmpty(result.Value);
@@ -130,25 +145,21 @@
             return;
         }
 
-        var responseHTTP = await repository.Delete($"api/countries/{country.Id}");
+        var responseHTTP = await repository.Delete($"api/countries/{id}");
 
         if (responseHTTP.Error)
         {
-            if (responseHTTP.HttpResponseMessage.StatusCode == System.Net.HttpStatusCode.NotFound)
+            if (responseHTTP.HttpResponseMessage.StatusCode != HttpStatusCode.NotFound)
             {
-                navigationManager.NavigateTo("/");
-            }
-            else
-            {
-                var mensajeError = await responseHTTP.GetErrorMessageAsync();
-                await sweetAlertService.FireAsync("Error", mensajeError, SweetAlertIcon.Error);
+                var message = await responseHTTP.GetErrorMessageAsync();
+                await sweetAlertService.FireAsync("Error", message, SweetAlertIcon.Error);
+                return;
             }
         }
-        else
-        {
-            await LoadAsync();
-        }
+
+        await LoadAsync();
     }
+
     private async Task CleanFilterAsync()
     {
         Filter = string.Empty;
