--- a/Project.WEB/Pages/Index.razor
+++ b/Project.WEB/Pages/Index.razor
@@ -1,24 +1,9 @@
 ﻿@page "/"
 
-<!--<PageTitle>HAPPY ZOO PROGRAM</PageTitle>
-
-<AuthorizeView Roles="Admin">
-    <Authorized>
-        <p>Estas autenticado y autorizado, @context.User.Identity?.Name</p>
-    </Authorized>
-    <NotAuthorized>
-        <p>No estas autorizado</p>
-    </NotAuthorized>
-</AuthorizeView>
-
-Bienvenido al programa HappyZoo, un projecto institucional.-->
-
 <!-- ======= Top Bar ======= -->
   <section id="topbar" class="d-flex align-items-center">
     <div class="container d-flex justify-content-center justify-content-md-between">
       <div class="contact-info d-flex align-items-center">
-@*        <i class="bi bi-envelope-fill"></i><a href="mailto:contact@example.com">info@example.com</a>
-        <i class="bi bi-phone-fill phone-icon"></i> +1 5589 55488 55*@
       </div>
       <div class="social-links d-none d-md-block">
                 <AuthorizeView>
@@ -31,10 +16,6 @@ Bienvenido al programa HappyZoo, un projecto institucional.-->
                     <a href="Login" class="btn-get-started animate__animated animate__fadeInUp scrollto">Iniciar Sesión</a>
                     </NotAuthorized>
                 </AuthorizeView>
-@*        <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>*@
       </div>
     </div>
   </section>
@@ -52,11 +33,15 @@ Bienvenido al programa HappyZoo, un projecto institucional.-->
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
-          <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
+          <li><a class="nav-link scrollto " href="#zoo">Zoo</a></li>
           <li><a class="nav-link scrollto" href="#team">Team</a></li>
           <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="countries">Countries</a></li>
+                <AuthorizeView>
+                    <Authorized>
+                        <li><a href="countries">Countries</a></li>
+                    </Authorized>
+                </AuthorizeView>
               <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
                 <ul>
                   <li><a href="#">Deep Drop Down 1</a></li>
@@ -92,7 +77,7 @@ Bienvenido al programa HappyZoo, un projecto institucional.-->
         <div class="carousel-item active" style="background-image: url(assets/img/slide/slide-1.jpg)">
           <div class="carousel-container">
             <div class="container">
-              <h2 class="animate__animated animate__fadeInDown">Welcome to <span>Green</span></h2>
+              <h2 class="animate__animated animate__fadeInDown">Welcome to <span>HAPPY ZOO</span></h2>
               <p class="animate__animated animate__fadeInUp">Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
               <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
             </div>
@@ -136,7 +121,7 @@ Bienvenido al programa HappyZoo, un projecto institucional.-->
 
   <main id="main">
 
-    <!-- ======= Featured Services Section ======= -->
+@*    <!-- ======= Featured Services Section ======= -->
     <section id="featured-services" class="featured-services section-bg">
       <div class="container">
 
@@ -165,7 +150,7 @@ Bienvenido al programa HappyZoo, un projecto institucional.-->
         </div>
 
       </div>
-    </section><!-- End Featured Services Section -->
+    </section><!-- End Featured Services Section -->*@
 
     <!-- ======= About Us Section ======= -->
     <section id="about" class="about">
@@ -202,7 +187,7 @@ Bienvenido al programa HappyZoo, un projecto institucional.-->
       </div>
     </section><!-- End About Us Section -->
 
-    <!-- ======= Why Us Section ======= -->
+    @*<!-- ======= Why Us Section ======= -->
     <section id="why-us" class="why-us">
       <div class="container">
 
@@ -247,9 +232,9 @@ Bienvenido al programa HappyZoo, un projecto institucional.-->
         </div>
 
       </div>
-    </section><!-- End Why Us Section -->
+    </section><!-- End Why Us Section -->*@
 
-    <!-- ======= Our Clients Section ======= -->
+@*    <!-- ======= Our Clients Section ======= -->
     <section id="clients" class="clients">
       <div class="container">
 
@@ -536,7 +521,7 @@ Bienvenido al programa HappyZoo, un projecto institucional.-->
         </div>
 
       </div>
-    </section><!-- End Portfolio Section -->
+    </section><!-- End Portfolio Section -->*@
 
     <!-- ======= Team Section ======= -->
     <section id="team" class="team section-bg">
@@ -604,7 +589,7 @@ Bienvenido al programa HappyZoo, un projecto institucional.-->
       </div>
     </section><!-- End Team Section -->
 
-    <!-- ======= Contact Section ======= -->
+    @*<!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
       <div class="container">
 
@@ -672,14 +657,14 @@ Bienvenido al programa HappyZoo, un projecto institucional.-->
         </div>
 
       </div>
-    </section><!-- End Contact Section -->
+    </section><!-- End Contact Section -->*@
 
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <h3>Green</h3>
+      <h3>HAPPY ZOO</h3>
       <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
       <div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
@@ -689,14 +674,14 @@ Bienvenido al programa HappyZoo, un projecto institucional.-->
         <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
       <div class="copyright">
-        &copy; Copyright <strong><span>Green</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>HAPPY ZOO</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/green-free-one-page-bootstrap-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Designed by <a href="https://bootstrapmade.com/">BootstrapMade </a><a> danielmmnez </a><a> cm_sebas </a>
       </div>
     </div>
   </footer><!-- End Footer -->
