--- a/Project.WEB/Pages/Diseases/DiseaseEdit.razor
+++ b/Project.WEB/Pages/Diseases/DiseaseEdit.razor
@@ -1,35 +1,35 @@
-﻿@page "/zoo/edit/{Id:int}"
+﻿@page "/diseases/edit/{Id:int}"
 @inject NavigationManager navigationManager
 @inject IRepository repository
 @inject SweetAlertService sweetAlertService
 
-<h3>Editar Zoológico</h3>
+<h3>Editar Enfermedad</h3>
 
-@if (zoo is null)
+@if (disease is null)
 {
     <p>Cargando...</p>
 }
 else
 {
-    <ZooForm @ref="zooForm" Zoo="zoo" OnValidSubmit="Edit" ReturnAction="Return" />
+    <DiseaseForm @ref="diseaseForm" Disease="disease" OnValidSubmit="Edit" ReturnAction="Return" />
 }
 
 @code {
-    private Zoo? zoo;
-    private ZooForm? zooForm;
+    private Disease? disease;
+    private DiseaseForm? diseaseForm;
 
     [Parameter]
     public int Id { get; set; }
 
     protected override async Task OnInitializedAsync()
     {
-        var responseHTTP = await repository.Get<Zoo>($"api/zoo/{Id}");
+        var responseHTTP = await repository.Get<Disease>($"api/diseases/{Id}");
 
         if (responseHTTP.Error)
         {
             if (responseHTTP.HttpResponseMessage.StatusCode == System.Net.HttpStatusCode.NotFound)
             {
-                navigationManager.NavigateTo("zoo");
+                navigationManager.NavigateTo("diseases");
             }
             else
             {
@@ -39,13 +39,13 @@ else
         }
         else
         {
-            zoo = responseHTTP.Response;
+            disease = responseHTTP.Response;
         }
     }
 
     private async Task Edit()
     {
-        var responseHTTP = await repository.Put("api/zoo", zoo);
+        var responseHTTP = await repository.Put("api/diseases", disease);
 
         if (responseHTTP.Error)
         {
@@ -54,14 +54,14 @@ else
         }
         else
         {
-            zooForm!.FormPostedSuccessfully = true;
-            navigationManager.NavigateTo("zoo");
+            diseaseForm!.FormPostedSuccessfully = true;
+            navigationManager.NavigateTo("disease");
         }
     }
 
     private void Return()
     {
-        navigationManager.NavigateTo("zoo");
+        navigationManager.NavigateTo("diseases");
     }
 }
 
