--- a/Project.WEB/Pages/Index.razor
+++ b/Project.WEB/Pages/Index.razor
@@ -31,10 +31,26 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="#about">About</a></li>
-          <li><a class="nav-link scrollto" href="#services">Services</a></li>
-          <li><a class="nav-link scrollto " href="#zoo">Zoo</a></li>
-          <li><a class="nav-link scrollto" href="#team">Team</a></li>
+          <AuthorizeView>
+            <Authorized>
+                <li><a class="nav-link scrollto" href="zoos">Zoo</a></li>
+            </Authorized>
+          </AuthorizeView>
+          <AuthorizeView>
+            <Authorized>
+                <li><a class="nav-link scrollto" href="managers">Managers</a></li>
+            </Authorized>
+          </AuthorizeView>
+          <AuthorizeView>
+            <Authorized>
+                <li><a class="nav-link scrollto" href="animals">Animals</a></li>
+            </Authorized>
+          </AuthorizeView>
+          <AuthorizeView>
+            <Authorized>
+                <li><a class="nav-link scrollto" href="species">Species</a></li>
+            </Authorized>
+          </AuthorizeView>
           <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
                 <AuthorizeView>
@@ -42,9 +58,13 @@
                         <li><a href="countries">Countries</a></li>
                     </Authorized>
                 </AuthorizeView>
+                                <AuthorizeView>
+                    <Authorized>
+                        <li><a href="diseases">Diseases</a></li>
+                    </Authorized>
+                </AuthorizeView>
               <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
                 <ul>
-                  <li><a href="specie">Species</a></li>
                   <li><a href="#">Deep Drop Down 1</a></li>
                   <li><a href="#">Deep Drop Down 2</a></li>
                   <li><a href="#">Deep Drop Down 3</a></li>
