--- a/Project.WEB/Pages/Managers/ManagerEdit.razor
+++ b/Project.WEB/Pages/Managers/ManagerEdit.razor
@@ -1,4 +1,4 @@
-﻿@page "/manager/edit/{Id:int}"
+﻿@page "/managers/edit/{Id:int}"
 @inject NavigationManager navigationManager
 @inject IRepository repository
 @inject SweetAlertService sweetAlertService
@@ -23,13 +23,13 @@ else
 
     protected override async Task OnInitializedAsync()
     {
-        var responseHTTP = await repository.Get<Manager>($"api/manager/{Id}");
+        var responseHTTP = await repository.Get<Manager>($"api/managers/{Id}");
 
         if (responseHTTP.Error)
         {
             if (responseHTTP.HttpResponseMessage.StatusCode == System.Net.HttpStatusCode.NotFound)
             {
-                navigationManager.NavigateTo("manager");
+                navigationManager.NavigateTo("managers");
             }
             else
             {
@@ -45,7 +45,7 @@ else
 
     private async Task Edit()
     {
-        var responseHTTP = await repository.Put("api/manager", manager);
+        var responseHTTP = await repository.Put("api/managers", manager);
 
         if (responseHTTP.Error)
         {
@@ -55,13 +55,13 @@ else
         else
         {
             managerForm!.FormPostedSuccessfully = true;
-            navigationManager.NavigateTo("manager");
+            navigationManager.NavigateTo("managers");
         }
     }
 
     private void Return()
     {
-        navigationManager.NavigateTo("manager");
+        navigationManager.NavigateTo("managers");
     }
 }
 
