--- a/Project.WEB/Pages/Species/SpecieEdit.razor
+++ b/Project.WEB/Pages/Species/SpecieEdit.razor
@@ -1,35 +1,35 @@
-﻿@page "/disease/edit/{Id:int}"
+﻿@page "/species/edit/{Id:int}"
 @inject NavigationManager navigationManager
 @inject IRepository repository
 @inject SweetAlertService sweetAlertService
 
-<h3>Editar Enfermedad</h3>
+<h3>Editar Especie</h3>
 
-@if (disease is null)
+@if (specie is null)
 {
     <p>Cargando...</p>
 }
 else
 {
-    <DiseaseForm @ref="diseaseForm" Disease="disease" OnValidSubmit="Edit" ReturnAction="Return" />
+    <SpecieForm @ref="specieForm" Specie="specie" OnValidSubmit="Edit" ReturnAction="Return" />
 }
 
 @code {
-    private Disease? disease;
-    private DiseaseForm? diseaseForm;
+    private Specie? specie;
+    private SpecieForm? specieForm;
 
     [Parameter]
     public int Id { get; set; }
 
     protected override async Task OnInitializedAsync()
     {
-        var responseHTTP = await repository.Get<Disease>($"api/disease/{Id}");
+        var responseHTTP = await repository.Get<Specie>($"api/species/{Id}");
 
         if (responseHTTP.Error)
         {
             if (responseHTTP.HttpResponseMessage.StatusCode == System.Net.HttpStatusCode.NotFound)
             {
-                navigationManager.NavigateTo("disease");
+                navigationManager.NavigateTo("species");
             }
             else
             {
@@ -39,13 +39,13 @@ else
         }
         else
         {
-            disease = responseHTTP.Response;
+            specie = responseHTTP.Response;
         }
     }
 
     private async Task Edit()
     {
-        var responseHTTP = await repository.Put("api/disease", disease);
+        var responseHTTP = await repository.Put("api/species", specie);
 
         if (responseHTTP.Error)
         {
@@ -54,14 +54,14 @@ else
         }
         else
         {
-            diseaseForm!.FormPostedSuccessfully = true;
-            navigationManager.NavigateTo("disease");
+            specieForm!.FormPostedSuccessfully = true;
+            navigationManager.NavigateTo("species");
         }
     }
 
     private void Return()
     {
-        navigationManager.NavigateTo("disease");
+        navigationManager.NavigateTo("species");
     }
 }
 
