--- a/Project.WEB/Pages/Zoos/ZooEdit.razor
+++ b/Project.WEB/Pages/Zoos/ZooEdit.razor
@@ -1,35 +1,35 @@
-﻿@page "/specie/edit/{Id:int}"
+﻿@page "/zoos/edit/{Id:int}"
 @inject NavigationManager navigationManager
 @inject IRepository repository
 @inject SweetAlertService sweetAlertService
 
-<h3>Editar Especie</h3>
+<h3>Editar Zoológico</h3>
 
-@if (specie is null)
+@if (zoo is null)
 {
     <p>Cargando...</p>
 }
 else
 {
-    <SpecieForm @ref="specieForm" Specie="specie" OnValidSubmit="Edit" ReturnAction="Return" />
+    <ZooForm @ref="zooForm" Zoo="zoo" OnValidSubmit="Edit" ReturnAction="Return" />
 }
 
 @code {
-    private Specie? specie;
-    private SpecieForm? specieForm;
+    private Zoo? zoo;
+    private ZooForm? zooForm;
 
     [Parameter]
     public int Id { get; set; }
 
     protected override async Task OnInitializedAsync()
     {
-        var responseHTTP = await repository.Get<Specie>($"api/specie/{Id}");
+        var responseHTTP = await repository.Get<Zoo>($"api/zoos/{Id}");
 
         if (responseHTTP.Error)
         {
             if (responseHTTP.HttpResponseMessage.StatusCode == System.Net.HttpStatusCode.NotFound)
             {
-                navigationManager.NavigateTo("specie");
+                navigationManager.NavigateTo("zoos");
             }
             else
             {
@@ -39,13 +39,13 @@ else
         }
         else
         {
-            specie = responseHTTP.Response;
+            zoo = responseHTTP.Response;
         }
     }
 
     private async Task Edit()
     {
-        var responseHTTP = await repository.Put("api/specie", specie);
+        var responseHTTP = await repository.Put("api/zoos", zoo);
 
         if (responseHTTP.Error)
         {
@@ -54,14 +54,14 @@ else
         }
         else
         {
-            specieForm!.FormPostedSuccessfully = true;
-            navigationManager.NavigateTo("specie");
+            zooForm!.FormPostedSuccessfully = true;
+            navigationManager.NavigateTo("zoos");
         }
     }
 
     private void Return()
     {
-        navigationManager.NavigateTo("specie");
+        navigationManager.NavigateTo("zoos");
     }
 }
 
