--- a/Project.WEB/Pages/Zoos/ZoosIndex.razor
+++ b/Project.WEB/Pages/Zoos/ZoosIndex.razor
@@ -1,4 +1,4 @@
-﻿@page "/zoo"
+﻿@page "/zoos"
 @inject IRepository repository
 @inject NavigationManager navigationManager
 @inject SweetAlertService sweetAlertService
@@ -6,10 +6,10 @@
 <h3>Zoológico</h3>
 
 <div class="mb-3">
-    <a class="btn btn-primary" href="/zoo/create">Nuevo Zoológico</a>
+    <a class="btn btn-primary" href="/zoos/create">Nuevo Zoológico</a>
 </div>
 
-<GenericList MyList="Zoo">
+<GenericList MyList="Zoos">
     <Body>
         <table class="table table-striped">
             <thead>
@@ -19,12 +19,12 @@
                 </tr>
             </thead>
             <tbody>
-                @foreach (var zoo in Zoo!)
+                @foreach (var zoo in Zoos!)
                 {
                     <tr>
                         <td>
-                            <a class="btn btn-warning">Editar</a>
-                            <button class="btn btn-danger">Borrar</button>
+                            <a href="/zoos/edit/@zoo.Id" class="btn btn-warning">Editar</a>
+                            <button class="btn btn-danger" @onclick=@(() => Delete(zoo))>Borrar</button>
                         </td>
                         <td>
                             @zoo.Name
@@ -37,7 +37,7 @@
 </GenericList>
 
 @code {
-    public List<Zoo>? Zoo { get; set; }
+    public List<Zoo>? Zoos { get; set; }
 
     protected async override Task OnInitializedAsync()
     {
@@ -46,8 +46,8 @@
 
     private async Task Load()
     {
-        var responseHppt = await repository.Get<List<Zoo>>("api/zoo");
-        Zoo = responseHppt.Response!;
+        var responseHppt = await repository.Get<List<Zoo>>("api/zoos");
+        Zoos = responseHppt.Response!;
     }
 
     private async Task Delete(Zoo zoo)
@@ -67,7 +67,7 @@
             return;
         }
 
-        var responseHTTP = await repository.Delete($"api/zoo/{zoo.Id}");
+        var responseHTTP = await repository.Delete($"api/zoos/{zoo.Id}");
 
         if (responseHTTP.Error)
         {
