--- a/Project.WEB/Shared/AuthLinks.razor
+++ b/Project.WEB/Shared/AuthLinks.razor
@@ -1,10 +1,34 @@
 ﻿@*<AuthorizeView>
     <Authorized>
-        <span>Hola, @context.User.Identity!.Name</span>
-        <a href="Logout" class="nav-link btn btn-link">Cerrar Sesión</a>
+        Hola, <a href="EditUser" class="nav-link btn btn-link">@context.User.Identity!.Name</a>
+        @if (!string.IsNullOrEmpty(photoUser))
+        {
+            <div class="mx-2">
+                <img src="@photoUser" width="50" height="50" style="border-radius:50%" />
+            </div>
+        }
+        <a href="Logout" class="btn-get-started animate__animated animate__fadeInUp scrollto">Cerrar Sesión</a>
     </Authorized>
     <NotAuthorized>
-        <a href="Register" class="nav-link btn btn-link">Registro</a>
-        <a href="Login" class="nav-link btn btn-link">Iniciar Sesión</a>
+        <a href="Register" class="btn-get-started animate__animated animate__fadeInUp scrollto">Registro</a>
+        <a href="Login" class="btn-get-started animate__animated animate__fadeInUp scrollto">Iniciar Sesión</a>
     </NotAuthorized>
-</AuthorizeView>*@
+</AuthorizeView>
+
+@code {
+    private string? photoUser;
+
+    [CascadingParameter]
+    private Task<AuthenticationState> authenticationStateTask { get; set; } = null!;
+
+    protected async override Task OnParametersSetAsync()
+    {
+        var authenticationState = await authenticationStateTask;
+        var claims = authenticationState.User.Claims.ToList();
+        var photoClaim = claims.FirstOrDefault(x => x.Type == "Photo");
+        if (photoClaim is not null)
+        {
+            photoUser = photoClaim.Value;
+        }
+    }
+}*@
